edit: api on docs/api
