# src/main/java/com/prog3td/demo/controller/mapper/PlayerRestMapper.java
@@ -5,9 +5,12 @@ import com.prog3td.demo.controller.response.Read.PlayerRest;
 import com.prog3td.demo.controller.response.Update.UpdatePlayer;
 import com.prog3td.demo.controller.response.specific.PlayerTeamRest;
 import com.prog3td.demo.model.Player;
+import com.prog3td.demo.model.Team;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
 @Component
+@AllArgsConstructor
 public class PlayerRestMapper {
     public PlayerRest toRest(Player domain){
         return PlayerRest.builder()
@@ -16,9 +19,14 @@ public class PlayerRestMapper {
                 .build();
     }
     public Player toDomain(CreatePlayer rest){
+        Team TEAM = Team.builder()
+                .idTeam(rest.getTeam().getId())
+                .name(rest.getTeam().getName())
+                .build();
         return Player.builder()
                 .name(rest.getName())
                 .number(rest.getNumber())
+                .team(TEAM)
                 .build();
     }
     public Player toDomain(UpdatePlayer rest){
