# src/main/java/com/prog3td/demo/controller/response/specific/TeamPlayerRest.java
@@ -1,6 +1,5 @@
-package com.prog3td.demo.controller.response.Update;
+package com.prog3td.demo.controller.response.specific;
 
-import com.prog3td.demo.controller.response.specific.TeamPlayerRest;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -8,13 +7,11 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 @AllArgsConstructor
-@NoArgsConstructor
 @Getter
 @Setter
+@NoArgsConstructor
 @Builder
-public class UpdatePlayer {
+public class TeamPlayerRest {
     private Long id;
     private String name;
-    private Long number;
-    private TeamPlayerRest team;
 }
